fix division by zero error when no evaluationsheets have been graded yet, dropdown spacing

--- a/tarmii/theme/static/css/styles.css
+++ b/tarmii/theme/static/css/styles.css
@@ -635,3 +635,7 @@ table.listing.admin-table th {
 .bold {
     font-weight: bold;
 }
+
+.select-assessment {
+    padding-right: 4px;
+}
